Cross-reference 58:2.1 and 41:5.2 in the notes

--- a/tex/p041.tex
+++ b/tex/p041.tex
@@ -50,7 +50,7 @@
 \vs p041 4:7 Another of the Orvonton giants now has a surface temperature a trifle under 3,000\,°C. Its diameter is over 482,803,200\,km --- ample room to accommodate your sun and the present orbit of the earth. And yet, for all this enormous size, over 40,000,000 times\fnst{Here the ``size'' obviously signifies the volume, not the diameter, because the diameter of the Sun is 1,391,400\,km and therefore the ratio of volumes of the two stars is 41,778,652, i.e. approximately 40,000,000.} that of your sun, its mass is only about 30 times greater. These enormous suns have an extending fringe that reaches almost from one to the other.
 \usection{Solar Radiation}
 \vs p041 5:1 That the suns of space are not very dense is proved by the steady streams of escaping light\hyp{}energies. Too great a density would retain light by opacity until the light\hyp{}energy pressure reached the explosion point. There is a tremendous light or gas pressure within a sun to cause it to shoot forth such a stream of energy as to penetrate space for millions upon millions of kilometres to energize, light, and heat the distant planets. 4.6\,m of surface of the density of Urantia would effectually prevent the escape of all X\hyp{}rays and light\hyp{}energies from a sun until the rising internal pressure of accumulating energies resulting from atomic dismemberment overcame gravity with a tremendous outward explosion.
-\vs p041 5:2 Light, in the presence of the propulsive gases, is highly explosive when confined at high temperatures by opaque retaining walls. Light is real. As you value energy and power on your world, sunlight would be economical at a million dollars a pound\fnst{On p.~111 of ``Space, Time, and Gravitation'' by A.S.\,Eddington \cite{Eddington2} we read: ``I have calculated that at the low charge of~3\bibemph{d}. a unit, an Electric Light Company would have to sell light at the rate of £140,000,000 a pound. All the sunlight falling on the earth amounts to 160 tons daily.'' Now, at the time the exchange rate was £1 = \$5 and thus the actual price of light in US dollars would be 700 million dollars a pound. So, yes, at 1/700\ts{th} of the price it would be very \bibemph{economical} indeed!}.
+\vs p041 5:2 Light, in the presence of the propulsive gases, is highly explosive when confined at high temperatures by opaque retaining walls. Light is real. As you value energy and power on your world, sunlight would be economical at a million dollars a pound\fnst{On p.~111 of ``Space, Time, and Gravitation'' by A.S.\,Eddington \cite{Eddington2} we read: ``I have calculated that at the low charge of~3\bibemph{d}. a unit, an Electric Light Company would have to sell light at the rate of £140,000,000 a pound. All the sunlight falling on the earth amounts to 160 tons daily.'' Now, at the time the exchange rate was £1 = \$5 and thus the actual price of light in US dollars would be 700 million dollars a pound. So, yes, at 1/700\ts{th} of the price it would be very \bibemph{economical} indeed! See also \bibref[58:2.1]{p058 2:1}.}.
 \vs p041 5:3 The interior of your sun is a vast X\hyp{}ray generator. The suns are supported from within by the incessant bombardment of these mighty emanations.
 \vs p041 5:4 It requires more than 500,000 years for an X\hyp{}ray\hyp{}stimulated electron to work its way from the very centre of an average sun up to the solar surface, whence it starts out on its space adventure, maybe to warm an inhabited planet, to be captured by a meteor, to participate in the birth of an atom, to be attracted by a highly charged dark island of space, or to find its space flight terminated by a final plunge into the surface of a sun similar to the one of its origin.
 \vs p041 5:5 The X\hyp{}rays of a sun’s interior charge the highly heated and agitated electrons with sufficient energy to carry them out through space, past the hosts of detaining influences of intervening matter and, in spite of divergent gravity attractions, on to the distant spheres of the remote systems. The great energy of velocity required to escape the gravity clutch of a sun is sufficient to ensure that the sunbeam will travel on with unabated velocity until it encounters considerable masses of matter; whereupon it is quickly transformed into heat with the liberation of other energies.
