Remove the usage of "itemize" environment

--- a/tex/p005.tex
+++ b/tex/p005.tex
@@ -55,7 +55,7 @@
 \vs p005 4:15 \pc In the study of the religious life of Jesus, view him positively. Think not so much of his sinlessness as of his righteousness, his loving service. Jesus upstepped the passive love disclosed in the Hebrew concept of the heavenly Father to the higher \bibemph{active} and creature\hyp{}loving affection of a God who is the Father of every individual, even of the wrongdoer.
 \usection{The Consciousness of God}
 \vs p005 5:1 Morality has its origin in the reason of self\hyp{}consciousness; it is superanimal but wholly evolutionary. Human evolution embraces in its unfolding all endowments antecedent to the bestowal of the Adjusters and to the pouring out of the Spirit of Truth. But the attainment of levels of morality does not deliver man from the real struggles of mortal living. Man’s physical environment entails the battle for existence; the social surroundings necessitate ethical adjustments; the moral situations require the making of choices in the highest realms of reason; the spiritual experience (having realized God) demands that man find him and sincerely strive to be like him.
-\vs p005 5:2 Religion is not grounded in the facts of science, the obligations of society, the assumptions of philosophy, or the implied duties of morality. Religion is an independent realm of human response to life situations and is unfailingly exhibited at all stages of human development which are postmoral. Religion may permeate all four levels of the realization of values and the enjoyment of universe fellowship: \begin{itemize}\item the physical or material level of self\hyp{}preservation; \item the social or emotional level of fellowship; \item the moral or duty level of reason; \item the spiritual level of the consciousness of universe fellowship through divine worship.\end{itemize}
+\vs p005 5:2 Religion is not grounded in the facts of science, the obligations of society, the assumptions of philosophy, or the implied duties of morality. Religion is an independent realm of human response to life situations and is unfailingly exhibited at all stages of human development which are postmoral. Religion may permeate all four levels of the realization of values and the enjoyment of universe fellowship: the physical or material level of self\hyp{}preservation; the social or emotional level of fellowship; the moral or duty level of reason; the spiritual level of the consciousness of universe fellowship through divine worship.
 \vs p005 5:3 The fact\hyp{}seeking scientist conceives of God as the First Cause, a God of force. The emotional artist sees God as the ideal of beauty, a God of aesthetics. The reasoning philosopher is sometimes inclined to posit a God of universal unity, even a pantheistic Deity. The religionist of faith believes in a God who fosters survival, the Father in heaven, the God of love.
 \vs p005 5:4 \pc Moral conduct is always an antecedent of evolved religion and a part of even revealed religion, but never the whole of religious experience. Social service is the result of moral thinking and religious living. Morality does not biologically lead to the higher spiritual levels of religious experience. The adoration of the abstract beautiful is not the worship of God; neither is exaltation of nature nor the reverence of unity the worship of God.
 \vs p005 5:5 Evolutionary religion is the mother of the science, art, and philosophy which elevated man to the level of receptivity to revealed religion, including the bestowal of Adjusters and the coming of the Spirit of Truth. The evolutionary picture of human existence begins and ends with religion, albeit very different qualities of religion, one evolutional and biological, the other revelational and periodical. And so, while religion is normal and natural to man, it is also optional. Man does not have to be religious against his will.
