--- a/tex/p011.tex
+++ b/tex/p011.tex
@@ -32,7 +32,7 @@
 \vs p011 3:1 On upper Paradise there are three grand spheres of activity, the \bibemph{Deity presence,} the \bibemph{Most Holy Sphere,} and the \bibemph{Holy Area.} The vast region immediately surrounding the presence of the Deities is set aside as the Most Holy Sphere and is reserved for the functions of worship, trinitization, and high spiritual attainment. There are no material structures nor purely intellectual creations in this zone; they could not exist there. It is useless for me to undertake to portray to the human mind the divine nature and the beauteous grandeur of the Most Holy Sphere of Paradise. This realm is wholly spiritual, and you are almost wholly material. A purely spiritual reality is, to a purely material being, apparently nonexistent.
 \vs p011 3:2 While there are no physical materializations in the area of the Most Holy, there are abundant souvenirs of your material days in the Holy Land sectors and still more in the reminiscent historic areas of peripheral Paradise.
 \vs p011 3:3 The Holy Area, the outlying or residential region, is divided into seven concentric zones. Paradise is sometimes called “the Father’s House” since it is his eternal residence, and these seven zones are often designated “the Father’s Paradise mansions.” The inner or first zone is occupied by Paradise Citizens and the natives of Havona who may chance to be dwelling on Paradise. The next or second zone is the residential area of the natives of the seven superuniverses of time and space. This second zone is in part subdivided into seven immense divisions, the Paradise home of the spirit beings and ascendant creatures who hail from the universes of evolutionary progression. Each of these sectors is exclusively dedicated to the welfare and advancement of the personalities of a single superuniverse, but these facilities are almost infinitely beyond the requirements of the present seven superuniverses.
-\vs p011 3:4 Each of the seven sectors of Paradise is subdivided into residential units suitable for the lodgement headquarters of 1,000,000,000 glorified individual working groups. \begin{itemize}\item 1,000 of these units constitute a division. \item 100,000 divisions equal 1 congregation. \item 10,000,000 congregations constitute an assembly. \item 1,000,000,000 assemblies make 1 grand unit.\end{itemize} And this ascending series continues through the 2\ts{nd} grand unit, the 3\ts{rd}, and so on to the 7\ts{th} grand unit. And 7 of the grand units make up the master units, and 7 of the master units constitute a superior unit; and thus by sevens the ascending series expands through the superior, supersuperior, celestial, supercelestial, to the supreme units. But even this does not utilize all the space available. This staggering number of residential designations on Paradise, a number beyond your concept, occupies considerably less than 1\% of the assigned area of the Holy Land. There is still plenty of room for those who are on their way inward, even for those who shall not start the Paradise climb until the times of the eternal future.
+\vs p011 3:4 Each of the seven sectors of Paradise is subdivided into residential units suitable for the lodgement headquarters of 1,000,000,000 glorified individual working groups. One thousand of these units constitute a division. One hundred thousand divisions equal one congregation. Ten million congregations constitute an assembly. One billion assemblies make one grand unit. And this ascending series continues through the 2\ts{nd} grand unit, the 3\ts{rd}, and so on to the 7\ts{th} grand unit. And 7 of the grand units make up the master units, and 7 of the master units constitute a superior unit; and thus by sevens the ascending series expands through the superior, supersuperior, celestial, supercelestial, to the supreme units. But even this does not utilize all the space available. This staggering number of residential designations on Paradise, a number beyond your concept, occupies considerably less than 1\% of the assigned area of the Holy Land. There is still plenty of room for those who are on their way inward, even for those who shall not start the Paradise climb until the times of the eternal future.
 \usection{Peripheral Paradise}
 \vs p011 4:1 The central Isle ends abruptly at the periphery, but its size is so enormous that this terminal angle is relatively indiscernible within any circumscribed area. The peripheral surface of Paradise is occupied, in part, by the landing and dispatching fields for various groups of spirit personalities. Since the nonpervaded\hyp{}space zones nearly impinge upon the periphery, all personality transports destined to Paradise land in these regions. Neither upper nor nether Paradise is approachable by transport supernaphim or other types of space traversers.
 \vs p011 4:2 The Seven Master Spirits have their personal seats of power and authority on the seven spheres of the Spirit, which circle about Paradise in the space between the shining orbs of the Son and the inner circuit of the Havona worlds, but they maintain force\hyp{}focal headquarters on the Paradise periphery. Here the slowly circulating presences of the Seven Supreme Power Directors indicate the location of the seven flash stations for certain Paradise energies going forth to the seven superuniverses.
