Added a note about 29 May 1919

--- a/tex/p015.tex
+++ b/tex/p015.tex
@@ -105,7 +105,7 @@
 \vs p015 6:10 The superuniverse of Orvonton is illuminated and warmed by more than ten trillion blazing suns. These suns are the stars of your observable astronomic system. More than two trillion are too distant and too small ever to be seen from Urantia. But in the master universe there are as many suns as there are glasses of water in the oceans of your world\fnst{Assuming the present value of the volume of the oceans (together with their seas) to be $1.5 \times 10^{18}\,m^3$ and a standard 250\,ml glass of water we obtain the required total number of stars: $6\times 10^{21}$.}.
 \vs p015 6:11 \pc \bibemph{The Dark Islands of Space.} These are the dead suns and other large aggregations of matter devoid of light and heat. The dark islands are sometimes enormous in mass and exert a powerful influence in universe equilibrium and energy manipulation. The density of some of these large masses is well\hyp{}nigh unbelievable. And this great concentration of mass enables these dark islands to function as powerful balance wheels, holding large neighbouring systems in effective leash. They hold the gravity balance of power in many constellations; many physical systems which would otherwise speedily dive to destruction in near\hyp{}by suns are held securely in the gravity grasp of these guardian dark islands. It is because of this function that we can locate them accurately. We have measured the gravity pull of the luminous bodies, and we can therefore calculate the exact size and location of the dark islands of space which so effectively function to hold a given system steady in its course.
 \vs p015 6:12 \pc \bibemph{Minor Space Bodies.} The meteors and other small particles of matter circulating and evolving in space constitute an enormous aggregate of energy and material substance.
-\vs p015 6:13 Many comets are unestablished wild offspring of the solar mother wheels, which are being gradually brought under control of the central governing sun. Comets also have numerous other origins. A comet’s tail points away from the attracting body or sun because of the electrical reaction of its highly expanded gases and because of the actual pressure of light and other energies emanating from the sun. This phenomenon constitutes one of the positive proofs of the reality of light and its associated energies; it demonstrates that light has weight. Light is a real substance, not simply waves of hypothetical ether.
+\vs p015 6:13 Many comets are unestablished wild offspring of the solar mother wheels, which are being gradually brought under control of the central governing sun. Comets also have numerous other origins. A comet’s tail points away from the attracting body or sun because of the electrical reaction of its highly expanded gases and because of the actual pressure of light and other energies emanating from the sun. This phenomenon constitutes one of the positive proofs of the reality of light and its associated energies; it demonstrates that light has weight\fnst{More correctly, this proves only that light has \bibemph{momentum,} but it is also true that light has \bibemph{weight} and this has been demonstrated by Sir Arthur~S. Eddington on 29\ts{th} May 1919, when he measured the deflection of light rays passing near the Sun during the eclipse. This day of the year, 29\ts{th} May, is the most favourable because on it the Sun passes through the midst of an exceptionally bright patch of the star cluster of Hyades, in constellation of Taurus. And in 1919 a solar eclipse happened to occur on this day, which provided the unique opportunity for such an experiment, successfully performed by Eddington.}. Light is a real substance, not simply waves of hypothetical ether.
 \vs p015 6:14 \pc \bibemph{The Planets.} These are the larger aggregations of matter which follow an orbit around a sun or some other space body; they range in size from planetesimals to enormous gaseous, liquid, or solid spheres. The cold worlds which have been built up by the assemblage of floating space material, when they happen to be in proper relation to a near\hyp{}by sun, are the more ideal planets to harbour intelligent inhabitants. The dead suns are not, as a rule, suited to life; they are usually too far away from a living, blazing sun, and further, they are altogether too massive; gravity is tremendous at the surface.
 \vs p015 6:15 In your superuniverse not one cool planet in 40 is habitable by beings of your order. And, of course, the superheated suns and the frigid outlying worlds are unfit to harbour higher life. In your solar system only three planets\fnst{The other two being Mars\index{Planets!Mars} and Venus,\index{Planets!Venus} according to A.S.\,Eddington, ``The Nature of the Physical World'', p.\,170, 1929.} are at present suited to harbour life. Urantia, in size, density, and location, is in many respects ideal for human habitation.
 \vs p015 6:16 The laws of physical\hyp{}energy behaviour are basically universal, but local influences have much to do with the physical conditions which prevail on individual planets and in local systems. An almost endless variety of creature life and other living manifestations characterizes the countless worlds of space. There are, however, certain points of similarity in a group of worlds associated in a given system, while there also is a universe pattern of intelligent life. There are physical relationships among those planetary systems which belong to the same physical circuit, and which closely follow each other in the endless swing around the circle of universes.
