--- a/tex/p027.tex
+++ b/tex/p027.tex
@@ -47,7 +47,7 @@
 \usection{Masters of Philosophy}
 \vs p027 6:1 Next to the supreme satisfaction of worship is the exhilaration of philosophy. Never do you climb so high or advance so far that there do not remain a thousand mysteries which demand the employment of philosophy in an attempted solution.
 \vs p027 6:2 The master philosophers of Paradise delight to lead the minds of its inhabitants, both native and ascendant, in the exhilarating pursuit of attempting to solve universe problems. These superaphic masters of philosophy are the “wise men of heaven,” the beings of wisdom who make use of the truth of knowledge and the facts of experience in their efforts to master the unknown. With them knowledge attains to truth and experience ascends to wisdom. On Paradise the ascendant personalities of space experience the heights of being: They have knowledge; they know the truth; they may philosophize --- think the truth; they may even seek to encompass the concepts of the Ultimate and attempt to grasp the techniques of the Absolutes.
-\vs p027 6:3 At the southern extremity of the vast Paradise domain the masters of philosophy conduct elaborate courses in the 70 functional divisions of wisdom. Here they discourse upon the plans and purposes of Infinity and seek to co\hyp{}ordinate the experiences, and to compose the knowledge, of all who have access to their wisdom. They have developed a highly specialized attitude toward various universe problems, but their final conclusions are always in uniform agreement.
+\vs p027 6:3 At the southern extremity of the vast Paradise domain the masters of philosophy conduct elaborate courses in the seventy functional divisions of wisdom. Here they discourse upon the plans and purposes of Infinity and seek to co\hyp{}ordinate the experiences, and to compose the knowledge, of all who have access to their wisdom. They have developed a highly specialized attitude toward various universe problems, but their final conclusions are always in uniform agreement.
 \vs p027 6:4 These Paradise philosophers teach by every possible method of instruction, including the higher graph technique of Havona and certain Paradise methods of communicating information. All of these higher techniques of imparting knowledge and conveying ideas are utterly beyond the comprehension capacity of even the most highly developed human mind. One hour’s instruction on Paradise would be the equivalent of 10,000 years of the word\hyp{}memory methods of Urantia. You cannot grasp such communication techniques, and there is simply nothing in mortal experience with which they may be compared, nothing to which they can be likened.
 \vs p027 6:5 The masters of philosophy take supreme pleasure in imparting their interpretation of the universe of universes to those beings who have ascended from the worlds of space. And while philosophy can never be as settled in its conclusions as the facts of knowledge and the truths of experience, yet, when you have listened to these primary supernaphim discourse upon the unsolved problems of eternity and the performances of the Absolutes, you will feel a certain and lasting satisfaction concerning these unmastered questions.
 \vs p027 6:6 These intellectual pursuits of Paradise are not broadcast; the philosophy of perfection is available only to those who are personally present. The encircling creations know of these teachings only from those who have passed through this experience, and who have subsequently carried this wisdom out to the universes of space.
